--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ div {
   z-index: 1;
 }
 
+h1.not-found {
+  margin: 40px;
+  text-align: center;
+}
+
 hr {
   margin: 10px;
   border: 1px dashed;
